# bundler-diff

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-turbopack-cli-release.yml
cases/: README.md
cases/base64/: package.json  rspack.config.cjs
cases/base64/rspack-dist/: entry.js
cases/base64/src/: base64-shim.js  entry.js
cases/basic/: TURBOPACK_RUNTIME.md
cases/basic/rspack-dist/: entry.js
cases/cache/: README.md
cases/cache/lazy-compilation/: README.md  package.json  rspack.config.cjs  webpack.config.cjs
cases/cache/lazy-compilation/scripts/: compare-lazy-cache.cjs
cases/cache/lazy-compilation/src/: entry.js  records.js
cases/cache/lazy-compilation/src/lazy/: report.js  weights.js
cases/cache/persistent/: README.md  package.json  rspack.config.cjs  webpack.config.cjs
cases/cache/persistent/multi-compiler/: README.md  rspack.config.cjs  shared-config.cjs  webpack.config.cjs
cases/cache/persistent/multi-compiler/loaders/: counting-loader.cjs
cases/cache/persistent/multi-compiler/scripts/: compare-multi-compiler-cache.cjs
cases/cache/persistent/multi-compiler/src/: client.js  entry.js  server.js  shared.js
cases/cache/persistent/scripts/: expect-persistent-cache.cjs
cases/cache/persistent/src/: catalog.js  entry.js  summary.js
cases/complex/: RSPACK_RUNTIME.md  RUNTIME_COMPARISON.md  TURBOPACK_RUNTIME.md  package.json  rspack.config.cjs  rspack.multi-f.config.cjs
cases/complex/rspack-dist/: entry.js  runtime.js  src_lazy_js.js  src_require-consumer_cjs.js  src_tla_js.js
cases/complex/rspack-multi-f-dist/: multi-f-entry.js  runtime.js  src_styled-feature_js.css  src_styled-feature_js.js
cases/complex/scripts/: verify-multiple-f.cjs
cases/complex/src/: context-consumer.js  counter.js  entry.js  lazy.js  legacy-reexport.js  legacy.cjs  message.js  meta.js  multi-f-entry.js  path-consumer.cjs  require-consumer.cjs  styled-feature.js  tla.js
cases/complex/src/features/: feature-a.js  feature-b.js
cases/complex/src/styles/: styled-feature.css
cases/performance/many-pages/: README.md  bundler-config.cjs  package.json  rspack.config.cjs  webpack.config.cjs
cases/performance/many-pages/scripts/: generate-fixture.cjs  run-benchmark.cjs  start-dev-server.cjs
cases/performance/many-pages/scripts/lib/: browser.cjs  fixture.cjs  hmr.cjs  metrics.cjs  process-tree.cjs  server.cjs  webpack-lazy-backend.cjs
cases/performance/many-pages/test/: config.test.cjs  fixture.test.cjs  hmr.test.cjs  metrics.test.cjs  server.test.cjs  webpack-lazy-backend.test.cjs
cases/runtime/base64/: package.json  rspack.config.cjs
cases/runtime/base64-loader/: hit-loader.cjs  package.json
cases/runtime/base64-loader/scripts/: expect-loader-hit.cjs
cases/runtime/base64-loader/src/: entry.js
cases/runtime/base64/rspack-dist/: entry.js  runtime.js
cases/runtime/base64/src/: entry.js
cases/runtime/basic/: package.json  rspack.config.cjs
cases/runtime/basic/rspack-dist/: entry.js  runtime.js
cases/runtime/basic/src/: entry.js  message.js
cases/target-compare/: package.json
cases/target-compare/browser-dist/: src_075ltu4._.js  src_lazy_14qan45.js  turbopack-[output]_dist_entry_entry_1pbskr-.js
cases/target-compare/node-dist/: entry.entry.js  src_09cu9c-._.js  src_lazy_18swte0.js
cases/target-compare/scripts/: build-targets.cjs  compare-artifacts.cjs
cases/target-compare/src/: entry.js  lazy.js  message.js
crates/turbopack-cli/: Cargo.toml  README.md
crates/turbopack-cli/src/: arguments.rs  main.rs  util.rs
crates/turbopack-cli/src/dev/: mod.rs  web_entry_source.rs
crates/turbopack-trace-decoder-wasm/: Cargo.toml  README.md  turbopack-trace-decoder.mjs
crates/turbopack-trace-decoder-wasm/src/: lib.rs
scripts/: package-turbopack-cli-release.mjs
