[workspace]
resolver = "2"
members = ["crates/turbopack-cli"]

[workspace.lints.clippy]
too_many_arguments = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(rust_analyzer)',
  'cfg(fuzzing)',
  'cfg(codspeed)',
] }

[workspace.dependencies]
# Workspace crates
next-api = { path = "third_party/turbopack/crates/next-api" }
next-build = { path = "third_party/turbopack/crates/next-build" }
next-code-frame = { path = "third_party/turbopack/crates/next-code-frame" }
next-core = { path = "third_party/turbopack/crates/next-core" }
next-custom-transforms = { path = "third_party/turbopack/crates/next-custom-transforms", default-features = false }
next-taskless = { path = "third_party/turbopack/crates/next-taskless" }

# Turbopack
auto-hash-map = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-auto-hash-map" }
turbo-bincode = { path = "third_party/turbopack/turbopack/crates/turbo-bincode" }
turbo-dyn-eq-hash = { path = "third_party/turbopack/turbopack/crates/turbo-dyn-eq-hash" }
turbo-esregex = { path = "third_party/turbopack/turbopack/crates/turbo-esregex" }
turbo-frozenmap = { path = "third_party/turbopack/turbopack/crates/turbo-frozenmap" }
turbo-persistence = { path = "third_party/turbopack/turbopack/crates/turbo-persistence" }
turbo-prehash = { path = "third_party/turbopack/turbopack/crates/turbo-prehash" }
turbo-rcstr = { path = "third_party/turbopack/turbopack/crates/turbo-rcstr" }
turbo-tasks = { path = "third_party/turbopack/turbopack/crates/turbo-tasks" }
turbo-tasks-backend = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-backend" }
turbo-tasks-bytes = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-bytes" }
turbo-tasks-env = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-env" }
turbo-tasks-fetch = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-fetch" }
turbo-tasks-fs = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-fs" }
turbo-tasks-hash = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-hash" }
turbo-tasks-macros = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-macros" }
turbo-tasks-malloc = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-malloc", default-features = false }
turbo-tasks-testing = { path = "third_party/turbopack/turbopack/crates/turbo-tasks-testing" }
turbo-unix-path = { path = "third_party/turbopack/turbopack/crates/turbo-unix-path" }
turbopack = { path = "third_party/turbopack/turbopack/crates/turbopack" }
turbopack-bench = { path = "third_party/turbopack/turbopack/crates/turbopack-bench" }
turbopack-nodejs = { path = "third_party/turbopack/turbopack/crates/turbopack-nodejs" }
turbopack-cli-utils = { path = "third_party/turbopack/turbopack/crates/turbopack-cli-utils" }
turbopack-core = { path = "third_party/turbopack/turbopack/crates/turbopack-core" }
turbopack-create-test-app = { path = "third_party/turbopack/turbopack/crates/turbopack-create-test-app" }
turbopack-css = { path = "third_party/turbopack/turbopack/crates/turbopack-css" }
turbopack-analyze = { path = "third_party/turbopack/turbopack/crates/turbopack-analyze" }
turbopack-browser = { path = "third_party/turbopack/turbopack/crates/turbopack-browser" }
turbopack-dev-server = { path = "third_party/turbopack/turbopack/crates/turbopack-dev-server" }
turbopack-ecmascript = { path = "third_party/turbopack/turbopack/crates/turbopack-ecmascript" }
turbopack-ecmascript-plugins = { path = "third_party/turbopack/turbopack/crates/turbopack-ecmascript-plugins", default-features = false }
turbopack-ecmascript-runtime = { path = "third_party/turbopack/turbopack/crates/turbopack-ecmascript-runtime" }
turbopack-ecmascript-hmr-protocol = { path = "third_party/turbopack/turbopack/crates/turbopack-ecmascript-hmr-protocol" }
turbopack-env = { path = "third_party/turbopack/turbopack/crates/turbopack-env" }
turbopack-image = { path = "third_party/turbopack/turbopack/crates/turbopack-image" }
turbopack-mdx = { path = "third_party/turbopack/turbopack/crates/turbopack-mdx" }
turbopack-node = { path = "third_party/turbopack/turbopack/crates/turbopack-node", default-features = false }
turbopack-resolve = { path = "third_party/turbopack/turbopack/crates/turbopack-resolve" }
turbopack-static = { path = "third_party/turbopack/turbopack/crates/turbopack-static" }
turbopack-swc-utils = { path = "third_party/turbopack/turbopack/crates/turbopack-swc-utils" }
turbopack-test-utils = { path = "third_party/turbopack/turbopack/crates/turbopack-test-utils" }
turbopack-trace-server = { path = "third_party/turbopack/turbopack/crates/turbopack-trace-server" }
turbopack-trace-utils = { path = "third_party/turbopack/turbopack/crates/turbopack-trace-utils" }
turbopack-wasm = { path = "third_party/turbopack/turbopack/crates/turbopack-wasm" }

swc_ecma_react_compiler = "19.1.2"
react_compiler = { version = "0.1.5", package = "forked_react_compiler" }

# SWC crates
swc_core = { version = "69.0.0", default-features = false, features = [
  "ecma_loader_lru",
  "ecma_loader_parking_lot",
  "parallel_rayon",
] }

swc_plugin_backend_wasmtime = "11.0.0"
testing = "24.0.0"

# Keep consistent with preset_env_base through swc_core
browserslist-rs = "0.19.0"
mdxjs = "1.0.3"
modularize_imports = "9.0.0"
styled_components = "9.0.0"
styled_jsx = "9.0.0"
swc_emotion = "9.0.0"
swc_relay = "9.0.0"
react_remove_properties = "9.0.0"
remove_console = "9.0.0"
preset_env_base = "8.0.0"


# General Deps
chromiumoxide = { version = "0.5.4", features = [
  "tokio-runtime",
], default-features = false }
# For matching on errors from chromiumoxide. Keep in
# sync with chromiumoxide's tungstenite requirement.
tungstenite = "0.20.1"

allocator-api2 = "0.2.21"
# flate2_zlib requires zlib, use flate2_rust
allsorts = { version = "0.14.0", default-features = false, features = [
  "flate2_rust",
] }
anyhow = "1.0.100"
async-trait = "0.1.64"
bincode = { version = "2.0.1", features = ["serde"] }
bitfield = "0.19.4"
bumpalo = { version = "3.19.0", features = ["boxed", "collections", "allocator-api2"] }
byteorder = "1.5.0"
bytes = "1.11.1"
bytes-str = "0.2.7"
chrono = "0.4.23"
clap = { version = "4.5.2", features = ["derive"] }
concurrent-queue = "2.5.0"
console-subscriber = "0.4.1"
const_format = "0.2.30"
crc32fast = "1.5.0"
criterion = { package = "codspeed-criterion-compat", version = "4.3.0" }
ctor = "1.0.7"
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8"
dashmap = "6.1.0"
data-encoding = "2.3.3"
dhat = { version = "0.3.2" }
dunce = "1.0.3"
either = "1.15.0"
erased-serde = "0.4.5"
flate2 = "1.0.28"
futures = "0.3.31"
futures-retry = "0.6.0"
futures-util = "0.3.31"
hashbrown = "0.14.5"
image = { version = "0.25.8", default-features = false }
indexmap = "2.13.0"
indoc = "2.0.0"
itertools = "0.10.5"
lightningcss = { version = "1.0.0-alpha.70", features = [
  "serde",
  "visitor",
  "into_owned",
  "browserslist",
] }
lightningcss-napi = { version = "0.4.6", default-features = false, features = [
  "visitor",
] }
lzzzz = "2.0.0"
markdown = "1.0.0-alpha.18"
memchr = "2.8.0"
mime = "0.3.16"
napi = { version = "2", default-features = false, features = [
  "napi3",
  "serde-json",
  "tokio_rt",
  "error_anyhow",
  # Lightningcss uses this features
  "napi4",
  "napi5",
  "compat-mode",
] }
napi-derive = "2"
napi-build = "2"
nohash-hasher = "0.2.0"
notify = "8.1.0"
owo-colors = "4.2.2"
parcel_selectors = "0.28.2"
parking_lot = "0.12.1"
pathdiff = "0.2.1"
phf = { version = "0.11", features = ["macros"] }
petgraph = "0.8.3"
pin-project-lite = "0.2.17"
postcard = "1.0.4"
proc-macro2 = "1.0.79"
qstring = "0.7.2"
quick_cache = { version = "0.6.14" }
quote = "1.0.45"
rand = "0.10.1"
rayon = "1.10.0"
regex = "1.12.3"
regress = "0.10.4"
reqwest = { version = "0.13.2", default-features = false }
ringmap = "0.2.5"
roaring = "0.11.4"
rstest = "0.16.0"
rustc-hash = "2.1.1"
scattered-collect = "0.10.0"
semver = "1.0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_qs = "1.1.1"
serde_with = "3.18.0"
sha2 = "0.10.2"
smallvec = { version = "1.15.1", features = [
  "serde",
  "const_generics",
  "union",
  "const_new",
  "impl_bincode",
] }
shrink-to-fit = "0.2.10"
strsim = "0.11.1"
swc_sourcemap = "10.0.2"
syn = "2.0.100"
tempfile = "3.20.0"
terminal_size = "0.3.0"
thiserror = "1.0.48"
thread_local = "1.1.8"
tokio = "1.52.1"
tokio-util = { version = "0.7.18", features = ["io", "rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.16"
triomphe = { git = "https://github.com/sokra/triomphe", branch = "sokra/unstable" }
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
unsize = "1.1.0"
unty = "0.0.4"
url = "2.2.2"
urlencoding = "2.1.2"
uuid = "1.18.1"
vergen = { version = "9.0.6", features = ["cargo"] }
vergen-gitcl = { version = "1.0.8", features = ["cargo"] }
webbrowser = "1.0.6"

[patch.crates-io]
bincode = { git = "https://github.com/bgw/bincode.git", branch = "bgw/patches" }
virtue = { git = "https://github.com/bgw/virtue.git", branch = "bgw/fix-generic-default-parsing" }
# We have to very frequently bump the swc major version of mdxjs-rs
mdxjs = { git = "https://github.com/vercel-labs/mdxjs-rs-turbopack.git", branch = "turbopack" }
# Doesn't compile on recent nightly versions because of https://github.com/Michael-F-Bryan/include_dir/pull/117
include_dir = { git = "https://github.com/vercel-labs/include_dir", branch = "turbopack" }
