[package]
name = "runtime-turbopack-cli"
version = "0.1.0"
edition = "2024"
autobenches = false

[[bin]]
name = "turbopack-cli"
path = "src/main.rs"
bench = false

[lib]
bench = false

[features]
default = ["custom_allocator"]
profile = []
serializable = []
tokio_console = [
  "dep:console-subscriber",
  "tokio/tracing",
  "turbo-tasks/tokio_tracing",
]
custom_allocator = ["turbo-tasks-malloc/custom_allocator"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
console-subscriber = { workspace = true, optional = true }
dunce = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
owo-colors = { workspace = true }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
swc_core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-backend = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-malloc = { workspace = true, default-features = false }
turbo-unix-path = { workspace = true }
turbopack = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-cli-utils = { workspace = true }
turbopack-core = { workspace = true }
turbopack-css = { workspace = true }
turbopack-dev-server = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-ecmascript-runtime = { workspace = true }
turbopack-env = { workspace = true }
turbopack-node = { workspace = true, default-features = false, features = ["process_pool"] }
turbopack-nodejs = { workspace = true }
turbopack-resolve = { workspace = true }
turbopack-trace-utils = { workspace = true }
webbrowser = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
