[package]
name = "turbopack-trace-decoder-wasm"
version = "0.1.0"
edition = "2024"
autobenches = false

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[dependencies]
postcard = { workspace = true, features = ["alloc", "use-std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
